syntax="proto3";
package dbproto;


//########################################

enum EnumAccountInfo{
   	Enum_t_isg_account_info_userid = 0;
	Enum_t_isg_account_info_source_number = 1;
	Enum_t_isg_account_info_source = 2;
	Enum_t_isg_account_info_server_id = 3;
	Enum_t_isg_account_info_sex = 4;
	Enum_t_isg_account_info_register_time = 5;
	Enum_t_isg_account_info_login_session = 6;
	Enum_t_isg_account_info_expire_time = 7;
	Enum_t_isg_account_info_device_id = 8;
	Enum_t_isg_account_info_platform = 9;
	Enum_t_isg_account_info_original_server_id = 10;
	Enum_t_isg_account_info_aaid = 11;
	Enum_t_isg_account_info_idfa = 12;
	Enum_t_isg_account_info_media_source = 13;
	Enum_t_isg_account_info_campaign = 14;
	Enum_t_isg_account_info_Max = 15;
}

message AccountInfo{
   	int32 userid = 1;
	string source_number = 2;
	int32 source = 3;
	int32 server_id = 4;
	int32 sex = 5;
	int32 register_time = 6;
	string login_session = 7;
	int32 expire_time = 8;
	string device_id = 9;
	int32 platform = 10;
	int32 original_server_id = 11;
	string aaid = 12;
	string idfa = 13;
	string media_source = 14;
	string campaign = 15;
}



